# pyclaims

./: README.md  pyproject.toml
docs/: REVIEW_TODO.md  api_reference.md  architecture.md  async.md  changelog.md  config.md  getting_started.md  migration_guide.md  parameter_matrix.md
docs/api/: client.md
docs/examples/: upload.md
docs/reference/: client.rst
docs/releases/: 0_9_0_preview.md  release_summary_0_9_0.md  release_summary_0_9_0_final.md
enterprise_docs/: sso.md
pyclaims/: __init__.py  client.py  errors.py  models.py
pyclaims/_utils/: cache.py
scenario_fixtures/: INDEX.md  TEST_MATRIX.md
scenario_fixtures/B1/TC-B1-E01/: case.md
scenario_fixtures/B1/TC-B1-E02/: case.md
scenario_fixtures/B1/TC-B1-ER01/: case.md
scenario_fixtures/B1/TC-B1-ER02/: broken_models.py  case.md
scenario_fixtures/B1/TC-B1-N01/: case.md  patch__utils_cache.py
scenario_fixtures/B1/TC-B1-N02/: case.md
scenario_fixtures/B1/TC-B1-P01/: case.md  patch_client.py  patch_docs_api_client.md
scenario_fixtures/B1/TC-B1-P02/: case.md
scenario_fixtures/B2/TC-B2-E01/: case.md
scenario_fixtures/B2/TC-B2-E02/: case.md  python312_example.py  python39_example.py
scenario_fixtures/B2/TC-B2-ER01/: case.md
scenario_fixtures/B2/TC-B2-ER02/: case.md  stale_example.py
scenario_fixtures/B2/TC-B2-N01/: case.md
scenario_fixtures/B2/TC-B2-N02/: case.md
scenario_fixtures/B2/TC-B2-P01/: case.md
scenario_fixtures/B2/TC-B2-P02/: case.md
scenario_fixtures/B3/TC-B3-E01/: case.md
tests/: test_basic.py
tools/: scan_public_api.py  search_docs.py
(+15 files in other folders)
